test/browser/styles/main.css
body {
  margin: 16px;
}

.list {
  position: relative;
  display: flex;
  flex-direction: row;
  overflow: scroll;
}

.list > * {
  flex: 0 0 auto;
}

.list > :not([data-lwc-ignore]) {
  margin: 50px;
}

.box {
  height: 200px;
  width: 200px;
}

.margin-fix {
  display: block;
  width: 1px;
  height: 1px;
  margin: 0 0 -1px -1px; 
}

